# Bit-TTT-Engine

./: .gitignore  .pre-commit-config.yaml  ACTION_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_JA.md  ARTICLE_DRAFT.md  Bit-TTT_Roadmap.md  Bit-TTT_Roadmap_EN.md  Bit-TTTについて.md  CHANGELOG.md  Cargo.toml  README.md  README_JA.md  RELEASE_NOTES.md  ROADMAP.md  build_error.txt  build_verify.txt  build_verify_fallback.txt  check_log.txt  clippy_log.txt  clippy_log_post.txt  clippy_report.txt  clippy_report_v2.txt  clippy_report_v3.txt  clippy_report_v4.txt  config.json  debug_output.txt  launch_chat.bat  launch_gui.bat  launch_gui.sh  launch_trainer.bat  run_clippy.bat  run_gui.bat  run_tests.bat  start_gui.bat  training_state.json  verify_binding.py
.agent/demand_definition/references/: discussion_log_format.md  step1_purpose.md  step2_alternatives.md  step3_scope.md  step4_requirements.md  step5_ui_prompt.md
.agent/rules/: v5.md
.agent/workflows/: commit-push.md  refactor.md  report.md
.cargo/: config.toml
.github/workflows/: rust.yml
bit_llama/: .gitignore  Cargo.toml  README.md  check_errors.json  inspect_ckpt.py  training_state.json
bit_llama/src/: cli_mode.rs  core_engine.rs  gui_mode.rs  main.rs
crates/bit_converter/: Cargo.toml
crates/bit_converter/src/: main.rs  process.rs
crates/bit_llama/: .gitignore  Cargo.toml  build.rs  tokenizer.json  training_state.json.bk
crates/bit_llama/data_prep/: prepare_tinystories.py
crates/bit_llama/examples/: check_vram_math.rs  debug_io.rs  debug_reconstruct.rs
crates/bit_llama/models/test_model/: config.json  tokenizer.json
crates/bit_llama/src/: chat.rs  cli.rs  config.rs  data.rs  evaluate.rs  export.rs  gui_mode.rs  inference.rs  lib.rs  loader.rs  main.rs  memory.rs  monitor.rs  state.rs  train.rs  vocab.rs
crates/bit_llama/src/data/: clean.rs  concat.rs  download.rs  instruct.rs  preprocess.rs  sampler.rs
crates/bit_llama/src/gui/: graph.rs  i18n.rs  inference_session.rs  mod.rs  presets.rs  ui.rs
crates/bit_llama/src/gui/tabs/: data.rs  inference.rs  mod.rs  model_lab.rs  settings.rs  training.rs
crates/bit_llama/src/train/: args.rs  checkpoint.rs  training_loop.rs
crates/rust_engine/: Cargo.toml  README.md  build.rs  build_final_err.txt  build_log_2.txt  build_log_phase3_fix.txt  build_log_utf8.txt  check.bat  check_debug_err.txt  check_debug_err_2.txt  check_err.txt  check_err_2.txt  check_err_3.txt  check_err_4.txt  clippy_audit.txt  cortex_rust.pyi  refactor_check.txt  refactor_check2.txt  refactor_test.txt  refactor_test2.txt  refactor_test3.txt  test_audit.txt  test_audit_2.txt  test_audit_3.txt  test_log.txt  test_log_2.txt  test_log_3.txt  test_log_4.txt  test_log_5.txt  test_log_6.txt
crates/rust_engine/examples/: debug_load.rs  python_sanity_check.py
crates/rust_engine/fuzz/: Cargo.toml
crates/rust_engine/fuzz/fuzz_targets/: fuzz_target_1.rs
crates/rust_engine/src/: core_engine.rs  device_utils.rs  layers.rs  lib.rs  model.rs  python.rs
crates/rust_engine/src/kernels/: adaptive_bit_op.cu  adaptive_bit_op.ptx  bit_op.cu  bit_op.ptx  cpu.rs  cuda.rs  mod.rs  packing.rs
crates/rust_engine/src/layers/: adaptive_linear.rs  attention.rs  bit_linear.rs  kv_cache.rs  rms_norm.rs  swiglu.rs  ttt.rs
crates/rust_engine/src/legacy/: bit_linear.rs  c_api.rs  mod.rs
crates/rust_engine/src/model/: block.rs  config.rs  llama.rs
crates/rust_engine/src/optim/: mod.rs  schedule_free.rs
crates/rust_engine/src/tests/: attention_test.rs
crates/rust_engine/tests/: bit_linear_test.rs  grad_test.rs
data/: corpus.txt
docs/: ANALYSIS_REPORT.md  BENCHMARK_STRATEGY.md  Bit-Llama_Engineコンセプト.md  CODE_ATLAS.md  CONTRIBUTING.md  CONTRIBUTING_JA.md  DEPENDENCY_MAP.md  DEVELOPER_GUIDE_JA.md  PROGRAMMER_REFLECTION.md  QUICK_PLAN.md  REFACTOR_PLAN.md  REFACTOR_ROADMAP.md  RISK_ASSESSMENT.md  RULES.md  SPECIFICATION.md  SPECIFICATION_JA.md  STRATEGIC_PLAN.md  SYNERGY_DESIGN.md  USER_GUIDE.md  USER_GUIDE_JA.md  VERIFICATION_PLAN.md  exe化する時の環境依存無くすやつ.md
docs/archive/fix_startup/: QUICK_PLAN.md
docs/context/: map.md  mission.md  protocols.md
docs/efficiency_plan/: ANALYSIS_REPORT.md  ROADMAP.md
docs/fix_gui_font/: QUICK_PLAN.md
docs/phase14/: REFACTOR_PLAN.md
docs/phase15/: ANALYSIS_REPORT.md  DEPENDENCY_MAP.md  PHASE_15_3_DESIGN.md  PHASE_15_4_PIPELINE.md  QUICK_PLAN.md  VERIFICATION_PLAN.md
docs/plan_b/: ANALYSIS_REPORT.md  DEPENDENCY_MAP.md  PHASE2_PLAN.md  ROADMAP.md  SYNERGY_DESIGN.md  VERIFICATION_PLAN.md  exe化計画.md
docs/refactor/: QUICK_PLAN_CLEANUP.md  おら.md
examples/: hello_bit_llama.py  python_inference.py
legacy/python_proto/: bit_linear.py  train_eval.py
logs/: bit_llama.log.2026-01-12
models/Meta-Llama-3-8B/: config.json
models/Meta-Llama-3-8B-Adaptive-2bit/: config.json
models/dummy/: config.json
models/ja_8k_10k/: checkpoint_step_8500.json  checkpoint_step_9000.json  checkpoint_step_9500.json  config.json  model_best.json  tokenizer.json
models/test_v2/: config.json  tokenizer.json
python_proto/: ttt_layer.py
release/: BIT_TTT_SPEC.md  README.md  benchmark.py
rust_engine/: Cargo.toml  pyproject.toml
rust_engine/src/: bit_linear.rs  c_api.rs  core_engine.rs  lib.rs  main.rs  ttt_layer.rs
rust_engine/src/legacy/: ttt_layer.rs
scripts/benchmarks/: bench_pytorch.py
scripts/utils/: setup_dummy_model.py
tools/: BitLlama-Export.ps1  BitLlama-PrepareWiki.ps1  BitLlama-Preprocess.ps1  README.md  benchmark_auto.py  chat.bat  evaluate.bat  png2ico.py  pre-commit  pre_demon.py  prepare_wiki.bat  prepare_wiki40b.py  train.bat
tools/conversion/: convert_adaptive.py  convert_llama_v2.py  patch_config.py
tools/data/: download_tinyllama.py  extract_corpus.py
tools/debug/: benchmark_comparison.py  debug_pack.py  debug_ppl.py  inspect_safetensors.py  verify_converted.py  verify_notorch.py
tools/experimental/: adaptive_decomposition.py
tools/scripts/: BitLlama-Chat.ps1  BitLlama-Evaluate.ps1  BitLlama-GUI.ps1  BitLlama-Train.ps1  pre_commit_check.py  pre_demon.py
tools/tests/: test_adaptive_e2e.py
tools/utils/: forge_sample_model.py  verify_binding.py
(+23 files in other folders)
