[package]
name = "bit_llama"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
candle-core = { version = "0.8.0" }
candle-nn = { version = "0.8.0" }
tokenizers = { version = "0.22", features = ["http"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"
eframe = "0.26"  # GUI framework
# ndarray = "0.15"

# Import our local Bit-TTT engine
# Note: We point to the local rust_engine folder
cortex_rust = { path = "../rust_engine" }
memmap2 = "0.9"
chrono = { version = "0.4.42", features = ["serde"] }
rfd = "0.17.1"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
