[package]
name = "cortex_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
rand = "0.8"
libc = "0.2"
candle-core = { version = "=0.8.4" }
candle-nn = { version = "=0.8.4" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokenizers = { version = "0.22", features = ["onig"] }
serde_json = "1.0"

pyo3 = { version = "0.20", features = ["extension-module", "macros"], optional = true }

[features]
default = ["python"]
python = ["dep:pyo3"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
