[package]
name = "cortex_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
libc = "0.2"
candle-core = { version = "=0.8.4" }
candle-nn = { version = "=0.8.4" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokenizers = { version = "0.22", features = ["onig"] }
serde_json = "1.0"

pyo3 = { version = "0.20", features = ["extension-module", "macros"], optional = true }
byteorder = "1.5.0"
memmap2 = "0.9.9"
fs2 = "0.4"
tracing = "0.1"

[features]
default = ["python"]
python = ["dep:pyo3"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
