[package]
name = "cortex_rust"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
libc = "0.2"
candle-core = { version = "=0.8.4" }
candle-nn = { version = "=0.8.4" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokenizers = { version = "0.22", features = ["onig"] }
serde_json = "1.0"

pyo3 = { version = "0.20", features = ["extension-module", "macros"], optional = true }
byteorder = "1.5.0"
memmap2 = "0.9.9"
fs2 = "0.4"
tracing = "0.1"
cudarc = { version = "0.10.0", features = ["driver"], optional = true }
half = "2.3"
rayon = "1.8"

[build-dependencies]
cc = "1.0"
anyhow = "1.0"
glob = "0.3"

[features]
default = ["python"]
python = ["dep:pyo3"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "dep:cudarc"]
